--- a/InfoBot/AdminkaBot/templates/InfoBot/locationBootstrap.html
+++ b/InfoBot/AdminkaBot/templates/InfoBot/locationBootstrap.html
@@ -40,8 +40,8 @@
         {% if Loc.tel %}<tr> <td><strong>Телефон: </strong>{{ Loc.tel  }}</td> </tr>{% endif %}
         <tr> <td><strong>Розклад: </strong>{{ Loc.work_schedule  }}</td> </tr>
           {% if Loc.SiteURL %}<tr> <td><strong>Сайт: </strong><a href="{{ Loc.SiteURL }}">{{ Loc.SiteURL }}</a></strong></td> </tr>{% endif %}
-         {% if Loc.InstagramURL %}<tr> <td><strong> <a href="{{ Loc.InstagramURL }}">Instagram</a></strong></td> </tr>{% endif %}
-         {% if Loc.FaсebookURL %} <tr> <td><strong> <a href="{{ Loc.FaсebookURL }}">Facebook</a></strong></td> </tr>{% endif %}
+         {% if Loc.InstagramURL %}<tr> <td><strong> <a href="{{ Loc.InstagramURL }}" class="LINK1">Instagram</a></strong></td> </tr>{% endif %}
+         {% if Loc.facebookURL %} <tr> <td><strong> <a href="{{ Loc.facebookURL }}" class="LINK1">Facebook</a></strong></td> </tr>{% endif %}
       </table>
     </div>
   </div>
