--- a/InfoBot/AdminkaBot/templates/InfoBot/locationsLINK.html
+++ b/InfoBot/AdminkaBot/templates/InfoBot/locationsLINK.html
@@ -2,6 +2,7 @@
 
 {% block object-tools %}
 
-<a class="button" href="https://orxid.in.ua/TerebInfoBot/broadcast/">Розсилка</a>
+<a class="button" href="https://orxid.in.ua/TerebInfoBot/broadcast/">Сторінка для розсилки</a>
+<a class="button" href="https://orxid.in.ua/TerebInfoBot/company/">Сторінка пошуку</a>
     {{ block.super }}
 {% endblock %}
