--- a/InfoBot/AdminkaBot/templates/InfoBot/ClientForm.html
+++ b/InfoBot/AdminkaBot/templates/InfoBot/ClientForm.html
@@ -2,13 +2,119 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Теребовля Інфо Бот</title>
+    <style>
+         body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+             background-image: url('https://img.freepik.com/free-vector/white-3d-paper-style-background_23-2148084377.jpg?w=1480&t=st=1705930675~exp=1705931275~hmac=326160f0cf366a9d5badaa1366f2263b203f273770326a1d0aa3638aa87293f0');
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: red;  /* rgba(0, 0, 0, 0.5); */
+            justify-content: center;
+            align-items: center;
+        }
+         .modal {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            max-width: 80%;
+            text-align: left;
+        }
+
+             #button {
+            background-color: #28a745;
+            color: #fff;
+            transition: font-size 0.4s;
+        }
+          #button:hover {
+            background-color: #52F772;
+            color: #fff;
+            font-size: 85%;
+            cursor: pointer;
+        }
+
+        .form-row {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .form-label {
+        margin-right: 1px;  /* Задаємо відступ для лейблів зправа */
+    }
+
+    .form-field {
+        flex-grow: 1;  /* Займає доступне простір внутрішнього контейнера */
+    }
+    </style>
 </head>
 <body>
-    <form method="post" enctype="multipart/form-data">
+<h2>Форма додавання локацій</h2>
+<div class="modal">
+     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button id = "button" type="submit">Submit</button>
+
+        <table>
+        <tr>
+           <td><label class="form-label" for="{{ form.Photo.id_for_label }}">{{ form.Photo.label }}: </label> </td>
+           <td>{{ form.Photo }}</td>
+        </tr>
+             <tr>
+           <td><label class="form-label" for="{{ form.Name.id_for_label }}">{{ form.Name.label }}: </label> </td>
+           <td>{{ form.Name }}</td>
+        </tr>
+             <tr>
+           <td><label class="form-label" for="{{ form.About.id_for_label }}">{{ form.About.label }}: </label> </td>
+           <td>{{ form.About }}</td>
+        </tr>
+             <tr>
+           <td><label class="form-label" for="{{ form.address.id_for_label }}">{{ form.address.label }}: </label> </td>
+           <td>{{ form.address }}</td>
+        </tr>
+             <tr>
+           <td><label class="form-label" for="{{ form.tel.id_for_label }}">{{ form.tel.label }}: </label> </td>
+           <td>{{ form.tel }}</td>
+        </tr>
+             <tr>
+           <td><label class="form-label" for="{{ form.work_schedule.id_for_label }}">{{ form.work_schedule.label }}: </label> </td>
+           <td>{{ form.work_schedule }}</td>
+        </tr>
+             <tr>
+           <td><label class="form-label" for="{{ form.email.id_for_label }}">{{ form.email.label }}: </label> </td>
+           <td>{{ form.email }}</td>
+        </tr>
+                   <tr>
+           <td><label class="form-label" for="{{ form.SiteURL.id_for_label }}">{{ form.SiteURL.label }}: </label> </td>
+           <td>{{ form.SiteURL }}</td>
+        </tr>
+                   <tr>
+           <td><label class="form-label" for="{{ form.facebookURL.id_for_label }}">{{ form.facebookURL.label }}: </label> </td>
+           <td>{{ form.facebookURL}}</td>
+        </tr>
+                      <tr>
+           <td><label class="form-label" for="{{ form.InstagramURL.id_for_label }}">{{ form.InstagramURL.label }}: </label> </td>
+           <td>{{ form.InstagramURL}}</td>
+        </tr>
+                      <tr>
+           <td><label class="form-label" for="{{ form.heshTeg.id_for_label }}">{{ form.heshTeg.label }}: </label> </td>
+           <td>{{ form.heshTeg}}</td>
+        </tr>
+        </table>
+        <button id = "button" type="submit">Надіслати</button>
     </form>
+</div>
 </body>
 </html>
