--- a/InfoBot/AdminkaBot/templates/InfoBot/ClientForm.html
+++ b/InfoBot/AdminkaBot/templates/InfoBot/ClientForm.html
@@ -10,7 +10,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-             background-image: url('https://img.freepik.com/free-vector/white-3d-paper-style-background_23-2148084377.jpg?w=1480&t=st=1705930675~exp=1705931275~hmac=326160f0cf366a9d5badaa1366f2263b203f273770326a1d0aa3638aa87293f0');
+           /*  background-image: url('https://img.freepik.com/free-vector/white-3d-paper-style-background_23-2148084377.jpg?w=1480&t=st=1705930675~exp=1705931275~hmac=326160f0cf366a9d5badaa1366f2263b203f273770326a1d0aa3638aa87293f0');*/
             height: 100vh;
             margin: 0;
             padding: 0;
