--- a/InfoBot/AdminkaBot/templates/InfoBot/locationsLINK.html
+++ b/InfoBot/AdminkaBot/templates/InfoBot/locationsLINK.html
@@ -5,5 +5,6 @@
 <a class="button" href="https://orxid.in.ua/TerebInfoBot/broadcast/">Сторінка для розсилки</a>
 <a class="button" href="https://orxid.in.ua/TerebInfoBot/company/">Сторінка пошуку</a>
 <a class="button" href="https://orxid.in.ua/TerebInfoBot/addlocation/">Форма клієнта</a>
+<a class="button" href="https://orxid.in.ua/TerebInfoBot/export/">CSV</a>
     {{ block.super }}
 {% endblock %}
