--- a/InfoBot/AdminkaBot/templates/InfoBot/broadcast.html
+++ b/InfoBot/AdminkaBot/templates/InfoBot/broadcast.html
@@ -35,7 +35,7 @@
               <div class="col-md-6 col-lg-7 d-flex align-items-center">
                 <div class="card-body p-4 p-lg-5 text-black">
   
-                  <form action="/terinfobot/ep/bro/" method="POST">
+                  <form action="{% url 'bro' %}" method="POST">
                   {% csrf_token %}
                     <div class="d-flex align-items-center mb-3 pb-1">
                      
